# Polymarket-Trading-Bot

./: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  SPEC.md  pyproject.toml
.claude/: settings.local.json
configs/: whitelist.toml
scripts/: build_whitelist.py  inspect_lookup.py  preflight.py
src/pmbot/: phase0_filter.py
src/pmbot/phase1_data/: bars_ingest.py  resolutions.py  resolutions_refresh.py  whitelist.py
tests/: test_phase0_filter.py
tests/phase1/: test_resolutions.py  test_resolutions_integration.py  test_whitelist.py  test_whitelist_integration.py
tests/phase1_data/: test_bars_ingest.py  test_resolutions_refresh.py
