[build-system]
   requires = ["setuptools>=68"]
   build-backend = "setuptools.build_meta"

   [project]
   name = "pmbot"
   version = "0.0.1"
   requires-python = ">=3.12"

   [tool.setuptools.packages.find]
   where = ["src"]

   [tool.pytest.ini_options]
   pythonpath = ["src"]
   testpaths = ["tests"]

   [tool.mypy]
   strict = true
   packages = ["pmbot"]

   [tool.ruff]
   line-length = 100